(test) rename DbFixture.noRollback() to DbFixture.readOnly()